Removed a random 2 in huart2_buffer

--- a/ImprovingPuttyInterface.ioc
+++ b/ImprovingPuttyInterface.ioc
@@ -96,11 +96,13 @@ RCC.APB2TimFreq_Value=48000000
 RCC.FCLKCortexFreq_Value=48000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=48000000
-RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,RTCClockSelection,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
 RCC.MCOFreq_Value=48000000
 RCC.PLLCLKFreq_Value=48000000
 RCC.PLLMCOFreq_Value=24000000
 RCC.PLLMUL=RCC_PLL_MUL6
+RCC.RTCClockSelection=RCC_RTCCLKSOURCE_HSE_DIV128
+RCC.RTCFreq_Value=62500
 RCC.SYSCLKFreq_VALUE=48000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=48000000
