--- a/ImprovingPuttyInterface.ioc
+++ b/ImprovingPuttyInterface.ioc
@@ -17,14 +17,15 @@ Mcu.Pin3=PA11
 Mcu.Pin4=PA12
 Mcu.Pin5=PA13
 Mcu.Pin6=PA14
-Mcu.Pin7=VP_SYS_VS_Systick
-Mcu.Pin8=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.PinsNb=9
+Mcu.Pin7=PB9
+Mcu.Pin8=VP_SYS_VS_Systick
+Mcu.Pin9=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.PinsNb=10
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
-MxCube.Version=4.24.0
-MxDb.Version=DB.4.0.240
+MxCube.Version=4.25.0
+MxDb.Version=DB.4.0.250
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true
@@ -44,6 +45,10 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=peeper
+PB9.Locked=true
+PB9.Signal=GPIO_Output
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
 PC13-TAMPER-RTC.GPIO_Label=LD0
 PC13-TAMPER-RTC.Locked=true
@@ -70,13 +75,14 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F103C8Tx
-ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.6.0
+ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.6.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
+ProjectManager.MainLocation=Src
 ProjectManager.PreviousToolchain=SW4STM32
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=ImprovingPuttyInterface.ioc
