--- a/ImprovingPuttyInterface.ioc
+++ b/ImprovingPuttyInterface.ioc
@@ -1,26 +1,14 @@
 #MicroXplorer Configuration settings - do not modify
-Dma.Request0=USART1_TX
-Dma.RequestsNb=1
-Dma.USART1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART1_TX.0.Instance=DMA1_Channel4
-Dma.USART1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_TX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART1_TX.0.Mode=DMA_NORMAL
-Dma.USART1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_TX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_TX.0.Priority=DMA_PRIORITY_LOW
-Dma.USART1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F1
-Mcu.IP0=DMA
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=USART1
-Mcu.IP5=USB
-Mcu.IP6=USB_DEVICE
-Mcu.IPNb=7
+Mcu.IP0=NVIC
+Mcu.IP1=RCC
+Mcu.IP2=SYS
+Mcu.IP3=USART1
+Mcu.IP4=USB
+Mcu.IP5=USB_DEVICE
+Mcu.IPNb=6
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
@@ -41,7 +29,6 @@ Mcu.UserName=STM32F103C8Tx
 MxCube.Version=4.25.0
 MxDb.Version=DB.4.0.250
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true
@@ -107,7 +94,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-true,3-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.ADCFreqValue=24000000
 RCC.AHBFreq_Value=48000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
